v0.3.5：图标改用 Lucide 开源素材（HiDPI 不再模糊）+ 顶栏/底栏单行布局对齐
图标：全部换成开源图标集 Lucide（ISC）素材，并按绘制时的设备像素倍数自己光栅化，
替代原来"生成逻辑尺寸位图交给 ImageIcon"的做法——2x / 系统缩放下不再被插值放大。
颜色改为在矢量层替换，亮暗主题共用同一份 SVG。

对齐：顶部栏与底部输入框工具栏原来各是"左右两个 FlowLayout"，两侧各行其是地按行高居中，
因此会整体错开几像素。改为一条 AssistantTheme.RowLayout（所有子组件共用容器中线 +
零宽弹簧推右侧组 + gapBefore 给间距）。

工具：新增 HeaderProbe / InkProfile / LayoutProbe / lab.py，给 zipcheck 补 v0.3.5 守门检查。
文档：README 补 0.3.5 更新记录；AGENTS.md 补 RowLayout 约定、打包备份与发版注意。